# advent-of-code

./: .editorconfig  Cargo.toml  README.md
2018/day13/: Cargo.toml
2018/day13/src/: main.rs  visualisation.rs
2018/day13/src/rail_map/: cart_state.rs  lib.rs  mod.rs  track.rs
2018/day15/: Cargo.toml
2018/day15/src/: main.rs  visualisation.rs
2018/day15/src/combat/: cave.rs  faction.rs  mod.rs  point.rs  state.rs  tile.rs  unit.rs
2018/day21/: Cargo.toml
2018/day21/src/: main.rs
2019/day13/: Cargo.toml
2019/day13/src/: main.rs
2019/day24/: Cargo.toml
2019/day24/src/: main.rs
2019/day24/src/game_of_life/: grid.rs
2019/day25/: Cargo.toml
2019/day25/src/: play.rs
2020/day01/: Cargo.toml
2020/day01/src/: main.rs
2020/day11/: Cargo.toml
2020/day11/src/: cardinal_direction.rs  main.rs  seat_layout.rs
2020/day11/src/test_helpers/: mod.rs
2020/day14/: Cargo.toml
2020/day14/src/: instruction.rs  main.rs  v1.rs
2020/day17/: Cargo.toml
2020/day17/src/: cell.rs  main.rs  parser.rs
2020/day20/: Cargo.toml
2020/day20/src/: edges.rs  main.rs  orientation_helpers.rs  tile.rs
day04/: Cargo.toml
day04/src/: input_record.rs  main.rs  validators.rs
helpers/rust/: Cargo.toml  README.md
helpers/rust/src/: args.rs  bit.rs  circular_buffer.rs  error.rs  input.rs  lib.rs  math.rs  parse.rs  parse_error.rs  part.rs  search.rs
helpers/rust/src/machine/: hook.rs  instruction.rs  mod.rs  output_receiver.rs  register.rs
helpers/rust/src/math/: mod.rs  polynomial.rs  with_gcd.rs
rust-v2/aoc2020/: Cargo.toml
rust-v2/aoc2020/src/: day01.rs
rust-v2/aoc2020/src/day01/: main.rs
rust-v2/aoc2020/src/day02/: main.rs  policy.rs  policy_v1.rs  policy_v2.rs
rust-v2/aoc2020/src/day03/: main.rs  map.rs  slope.rs
rust-v2/aoc2020/src/day04/: main.rs  passport.rs
rust-v2/aoc2020/src/day05/: main.rs
rust-v2/aoc2022/: Cargo.toml
rust-v2/aoc2022/src/: day01.rs  day02.rs  day03.rs  day04.rs
rust-v2/aoc2022/src/day01/: main.rs
rust-v2/aoc2022/src/day02/: choice.rs  main.rs  outcome.rs  rock_paper_scissors.rs
rust-v2/aoc2022/src/day02_lib/: choice.rs  mod.rs  outcome.rs  rock_paper_scissors.rs  with_score.rs
rust-v2/aoc2022/src/day03/: main.rs
rust-v2/aoc2022/src/day04/: assignment_pair.rs  main.rs
rust-v2/aoc2022/src/day04_lib/: assignment.rs  assignment_pair.rs  mod.rs
rust-v2/aoc2022/src/day05/: crane.rs  main.rs
rust-v2/aoc2022/src/day06/: main.rs
rust-v2/aoc2022/src/day07/: main.rs
rust-v2/aoc2022/src/day08/: forest.rs  main.rs
rust-v2/aoc2022/src/day09/: main.rs
rust-v2/aoc2022/src/day10/: main.rs  ocr.rs  output.rs
rust-v2/aoc2022/src/day11/: main.rs  monkey.rs  operation.rs
rust-v2/aoc2022/src/day12/: heightmap.rs  main.rs
rust-v2/aoc2022/src/day13/: main.rs  packet.rs
rust-v2/aoc2022/src/day14/: main.rs  point.rs
rust-v2/aoc2022/src/day15/: line.rs  main.rs  point.rs  sensor.rs
rust-v2/aoc2022/src/day16/: label.rs  main.rs  tunnels.rs  valve.rs  volcano.rs
rust-v2/aoc2022/src/day17/: chamber.rs  main.rs  point.rs  rock.rs
rust-v2/aoc2022/src/day18/: area.rs  main.rs  point.rs  region.rs
rust-v2/aoc2022/src/day19/: blueprint.rs  main.rs  pool.rs
rust-v2/aoc2022/src/day20/: main.rs
rust-v2/aoc2022/src/day21/: main.rs  monkey.rs
rust-v2/aoc2022/src/day22/: direction.rs  face.rs  grove.rs  main.rs  next.rs  tile.rs
rust-v2/aoc2022/src/day23/: direction.rs  main.rs
rust-v2/aoc2022/src/day24/: direction.rs  main.rs  valley.rs
rust-v2/aoc2022/src/day25/: main.rs  snafu.rs
rust-v2/aoc2023/: Cargo.toml
rust-v2/aoc2023/src/day01/: main.rs
rust-v2/aoc2023/src/day02/: game.rs  main.rs
rust-v2/aoc2023/src/day03/: main.rs
rust-v2/aoc2023/src/day04/: main.rs  scratch_card.rs
rust-v2/aoc2023/src/day05/: main.rs  mapping.rs
rust-v2/aoc2023/src/day06/: main.rs
rust-v2/aoc2023/src/day07/: card.rs  hand.rs  main.rs
rust-v2/aoc2023/src/day08/: main.rs  map.rs
rust-v2/aoc2023/src/day09/: main.rs
rust-v2/aoc2023/src/day10/: main.rs  pipe.rs
rust-v2/aoc2023/src/day11/: galaxy.rs  main.rs
rust-v2/aoc2023/src/day12/: main.rs  report.rs
rust-v2/aoc2023/src/day13/: main.rs  pattern.rs
rust-v2/aoc2023/src/day14/: main.rs  platform.rs
rust-v2/aoc2023/src/day15/: main.rs
rust-v2/aoc2023/src/day16/: contraption.rs  main.rs
rust-v2/aoc2023/src/day17/: city.rs  main.rs
rust-v2/aoc2023/src/day18/: direction.rs  lagoon.rs  lagoons.rs  main.rs  point.rs  section.rs
rust-v2/aoc2023/src/day19/: main.rs  parts.rs  str_encoder.rs  workflow.rs  workflows.rs
rust-v2/aoc2023/src/day20/: graph.rs  machine.rs  main.rs
rust-v2/aoc2023/src/day21/: garden.rs  main.rs
rust-v2/aoc2023/src/day22/: brick.rs  main.rs
rust-v2/aoc2023/src/day23/: hiking.rs  main.rs
rust-v2/aoc2023/src/day24/: fraction.rs  main.rs  sky.rs
rust-v2/aoc2023/src/day25/: main.rs  wiring.rs
rust-v2/aoc2023/src/shared/: enclosure.rs  lib.rs  overlap.rs  str_encoder.rs
rust/2016/day21/: Cargo.toml
rust/2016/day21/src/: instruction.rs
rust/2016/day22/: Cargo.toml
rust/2016/day22/src/: grid.rs
rust/2016/day25/: Cargo.toml
rust/2016/day25/src/: alternate.rs  main.rs
rust/2017/day13/: Cargo.toml
rust/2017/day13/src/: main.rs  scanner.rs  visualisation.rs
rust/2018/day13/: Cargo.toml
rust/2018/day13/src/: main.rs
rust/2018/day15/: Cargo.toml
rust/2018/day18/: Cargo.toml
rust/2019/day12/: Cargo.toml
rust/2019/day12/src/: main.rs
rust/2019/day13/: Cargo.toml
rust/2019/day13/src/: auto-play.rs  play.rs
rust/2019/day24/: Cargo.toml
rust/2019/day24/src/: visualisation.rs
rust/2021/day20/: Cargo.toml
rust/2021/day20/src/: bounds.rs  image.rs  main.rs  main_mt.rs  main_st.rs  point.rs  shared_state.rs
rust/aoc2021/: Cargo.toml
rust/aoc2021/src/day01/: main.rs
rust/aoc2021/src/day02/: direction.rs
rust/aoc2021/src/day03/: main.rs
rust/aoc2021/src/day05/: line.rs  main.rs
rust/aoc2021/src/day06/: main.rs
rust/aoc2021/src/day07/: main.rs
rust/helpers/: .gitignore  Cargo.toml  README.md
rust/helpers/src/: direction.rs  input.rs  lib.rs  part.rs  permutations.rs  search.rs
(+1362 files in other folders)
