[package]
name = "day15"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2018"
default-run = "day15"

[lib]
name = "combat"
path = "src/combat/lib.rs"

[[bin]]
name = "day15-visualisation"
path = "src/visualisation.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdcl_aoc_helpers = "0.5.0"
termion = "1.5.5"
