[package]
name = "day21"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2018"
default-run = "aoc-2018-21"

[[bin]]
name = "aoc-2018-21"
path = "src/main.rs"

[[bin]]
name = "aoc-2018-21-run"
path = "src/run.rs"

[dependencies]
rdcl_aoc_helpers = "0.5.1"
shared = { path = "../shared" }
