[package]
name = "day13"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2019-13"

[lib]
name = "arcade"
path = "src/arcade/lib.rs"

[[bin]]
name = "aoc-2019-13"
path = "src/main.rs"

[[bin]]
name = "aoc-2019-13-play"
path = "src/play.rs"

[[bin]]
name = "aoc-2019-13-auto-play"
path = "src/auto-play.rs"

[dependencies]
rdcl_aoc_helpers = "0.7.0"
grid = "0.2.3"
termion = "1.5.5"
shared = { path = "../shared" }
