[package]
name = "day17"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
description = "The solution for day 17 of the 2020 advent of code challenge."
documentation = "https://adventofcode.com/2020/day/17"
edition = "2018"
repository = "https://github.com/rjvdw/advent-of-code/"
exclude = ["input"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdcl_aoc_helpers = "0.2.0"
