[package]
name = "rdcl_aoc_helpers"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2018"
description = "Helpers for Advent of Code"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
