[package]
name = "rdcl_aoc_helpers"
version = "0.2.6"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
description = "Helpers for Advent of Code"
edition = "2018"
repository = "https://github.com/rjvdw/advent-of-code/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
