[package]
name = "rdcl_aoc2020"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"

[[bin]]
name = "rdcl_aoc2020_day01"
path = "src/day01/main.rs"

[[bin]]
name = "rdcl_aoc2020_day02"
path = "src/day02/main.rs"

[lib]
name = "rdcl_aoc2020"
path = "src/shared/lib.rs"

[dependencies]
rdcl_aoc_core = { path = "../lib/core" }
clap = { version = "3", features = ["derive"] }
