[package]
name = "rdcl_aoc2022"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"

[[bin]]
name = "rdcl_aoc2022_day01"
path = "src/day01/main.rs"

[[bin]]
name = "rdcl_aoc2022_day02"
path = "src/day02/main.rs"

[[bin]]
name = "rdcl_aoc2022_day03"
path = "src/day03/main.rs"

[[bin]]
name = "rdcl_aoc2022_day04"
path = "src/day04/main.rs"

[[bin]]
name = "rdcl_aoc2022_day05"
path = "src/day05/main.rs"

[[bin]]
name = "rdcl_aoc2022_day06"
path = "src/day06/main.rs"

[[bin]]
name = "rdcl_aoc2022_day07"
path = "src/day07/main.rs"

[[bin]]
name = "rdcl_aoc2022_day08"
path = "src/day08/main.rs"

[[bin]]
name = "rdcl_aoc2022_day09"
path = "src/day09/main.rs"

[[bin]]
name = "rdcl_aoc2022_day10"
path = "src/day10/main.rs"

[lib]
name = "rdcl_aoc2022"
path = "src/shared/lib.rs"

[dependencies]
rdcl_aoc_core = { path = "../lib/core" }
rdcl_aoc_ocr = { path = "../lib/ocr" }
clap = { version = "4", features = ["derive"] }
grid = "0.9"
termion = "2"
