[package]
name = "rdcl_aoc2023"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"

[[bin]]
name = "rdcl_aoc2023_day01"
path = "src/day01/main.rs"

[[bin]]
name = "rdcl_aoc2023_day02"
path = "src/day02/main.rs"

[[bin]]
name = "rdcl_aoc2023_day03"
path = "src/day03/main.rs"

[[bin]]
name = "rdcl_aoc2023_day04"
path = "src/day04/main.rs"

[[bin]]
name = "rdcl_aoc2023_day05"
path = "src/day05/main.rs"

[[bin]]
name = "rdcl_aoc2023_day06"
path = "src/day06/main.rs"

[[bin]]
name = "rdcl_aoc2023_day07"
path = "src/day07/main.rs"

[[bin]]
name = "rdcl_aoc2023_day08"
path = "src/day08/main.rs"

[[bin]]
name = "rdcl_aoc2023_day09"
path = "src/day09/main.rs"

[[bin]]
name = "rdcl_aoc2023_day10"
path = "src/day10/main.rs"

[[bin]]
name = "rdcl_aoc2023_day11"
path = "src/day11/main.rs"

[[bin]]
name = "rdcl_aoc2023_day12"
path = "src/day12/main.rs"

[[bin]]
name = "rdcl_aoc2023_day13"
path = "src/day13/main.rs"

[[bin]]
name = "rdcl_aoc2023_day14"
path = "src/day14/main.rs"

[[bin]]
name = "rdcl_aoc2023_day15"
path = "src/day15/main.rs"

[[bin]]
name = "rdcl_aoc2023_day16"
path = "src/day16/main.rs"

[[bin]]
name = "rdcl_aoc2023_day17"
path = "src/day17/main.rs"

[dependencies]
rdcl_aoc_core = { path = "../lib/core" }
rdcl_aoc_math = { path = "../lib/math" }
rdcl_aoc_pathfinding = { path = "../lib/pathfinding" }
clap = { version = "4", features = ["derive"] }
grid = "0.12"
