[package]
name = "rdcl_aoc_helpers"
version = "0.10.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
description = "Helpers for Advent of Code"
edition = "2021"
repository = "https://github.com/rjvdw/advent-of-code/"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.3"
grid = "0.9.0"
