[package]
name = "day22"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2016-22"

[[bin]]
name = "aoc-2016-22"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdcl_aoc_helpers = "0.7.0"
