[package]
name = "day25"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2016-25"

[[bin]]
name = "aoc-2016-25"
path = "src/main.rs"

[[bin]]
name = "aoc-2016-25-alternate"
path = "src/alternate.rs"

[dependencies]
rdcl_aoc_helpers = "0.9.0"
shared = { path = "../shared" }
