[package]
name = "day13"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2017-13"

[lib]
name = "scanner"
path = "src/scanner.rs"

[[bin]]
name = "aoc-2017-13"
path = "src/main.rs"

[[bin]]
name = "aoc-2017-3-visualisation"
path = "src/visualisation.rs"

[dependencies]
rdcl_aoc_helpers = "0.9.0"
termion = "1.5.5"
