[package]
name = "day15"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2018-15"

[lib]
name = "combat"
path = "src/combat/lib.rs"

[[bin]]
name = "aoc-2018-15"
path = "src/main.rs"

[[bin]]
name = "aoc-2018-15-visualisation"
path = "src/visualisation.rs"

[dependencies]
rdcl_aoc_helpers = "0.10.0"
termion = "2.0.1"
