[package]
name = "day18"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2021-18"

[lib]
name = "forest"
path = "src/forest/lib.rs"

[[bin]]
name = "aoc-2021-18"
path = "src/main.rs"

[[bin]]
name = "aoc-2021-18-visualisation"
path = "src/visualisation.rs"

[dependencies]
rdcl_aoc_helpers = "0.9.0"
termion = "1.5.5"
