[package]
name = "day12"
version = "0.1.0"
authors = ["Ruud van der Weide <rj@rdcl.dev>"]
edition = "2021"
default-run = "aoc-2019-12"

[lib]
name = "moon"
path = "src/moon.rs"

[[bin]]
name = "aoc-2019-12"
path = "src/main.rs"

[[bin]]
name = "aoc-2019-12-visualisation"
path = "src/visualisation.rs"

[dependencies]
rdcl_aoc_helpers = "0.9.0"
termion = "1.5.5"
